kubernetes/platform/istio/ingress/mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: kd
spec:
  mtls:
    mode: STRICT
