kubernetes/platform/istio/ingress/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule

metadata:
  name: default
  namespace: kd

spec:
  host: "*.kd.svc.cluster.local"

  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
