kubernetes/platform/istio/ingress/virtualservice.yaml
# VirtualService for external access
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: crm-gateway-routes
  namespace: kd
spec:
  hosts:
  - "*"
  gateways:
  - crm-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend
        port:
          number: 3000

# The VirtualService routes that external traffic to your application
